--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>Nexus SaaS</title>
+        <title>Consensus.App</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -37,7 +37,7 @@
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav justify-content-center">
 								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-								<li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
+								<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                 						<li class="nav-item"><a class="nav-link" href="price.html">Pricing</a>
 
 								<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -98,7 +98,7 @@
                 <h3>We’ve made a life <br />that will change you</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
             <br>    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
-            <a class="main_btn" href="#">Get Started Now</a>
+            <a class="main_btn" href="#">Get Started</a>
 
               </div>
             </div>
@@ -121,7 +121,7 @@
 								<h3>We’ve made a life <br />that will change you</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiu bsmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
 							<br>	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiu bsmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
-								<a class="main_btn" href="#">Get Started Now</a>
+								<a class="main_btn" href="#">Get Started</a>
 							</div>
 						</div>
 						<div class="col-lg-6">
