--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 					<div class="row">
 						<div class="col-lg-5">
 							<div class="banner_content">
-								<h2>Scalable & Cost Efficient <br>Voting Application</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim. sed do eiusmod tempor incididunt.</p>
+								<h2>Scalable & Auditable <br>Voting Application</h2>
+								<p>The Consensus voting application is a secure platform optimized for various polling and voting environments. Our technology can scale from small group projects and classrooms to large organizations and enterprises.</p>
 								<a class="banner_btn" href="#1">Learn More</a>
 								<a class="banner_btn2" href="#">Get Started</a>
 							</div>
@@ -95,9 +95,9 @@
             </div>
             <div class="col-lg-6">
               <div class="left_side_text">
-                <h3>We’ve made a life <br />that will change you</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
-            <br>    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+                <h3>Integrating Blockchain <br>Distributed Ledger Technology</h3>
+                <p>Consensus utilizes blockchain as a mechanism to allocate, recieve, and reference vote transactions, where the data is cryptographically secured on a distributed network.</p>
+            <br>    <p>We enable permissions that allow administrators to set parameters for each voting instance.</p>
             <a class="main_btn" href="#">Get Started</a>
 
               </div>
@@ -118,7 +118,7 @@
 					<div class="row made_life_text">
 						<div class="col-lg-6">
 							<div class="left_side_text">
-								<h3>We’ve made a life <br />that will change you</h3>
+								<h3>Transparent, Collusion Proof <br> & Censorship Free</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiu bsmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
 							<br>	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiu bsmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
 								<a class="main_btn" href="#">Get Started</a>
@@ -144,7 +144,7 @@
                 <section class="work_area p_120">
                 	<div class="container">
                 		<div class="main_title">
-                			<h2>How It work for you</h2>
+                			<h2>Key Features</h2>
                 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
                 		</div>
                 		<div class="work_inner row">
@@ -190,7 +190,7 @@
                       <div class="col-lg-4">
                         <div class="work_item">
                           <i class="lnr lnr-clock"></i>
-                          <a href="#"><h4>Stunning Visuals</h4></a>
+                          <a href="#"><h4>Secure</h4></a>
                           <p>Here, I focus on a range of items and features that we use in life without giving them a second thought such as Coca Cola.</p>
                         </div>
                       </div>
